Add latestBooks and latestCategories endpoints, apply migrations, refactor borrow request update

--- a/Readify.BLL/Readify.BLL.csproj
+++ b/Readify.BLL/Readify.BLL.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Readify.DAL\Readify.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Librarian\DTOs\" />
+  </ItemGroup>
+
 </Project>
