feat(chat): implement real-time chat using WebSocket with user-librarian message routing

--- a/Readify.API/appsettings.json
+++ b/Readify.API/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-L8F2DLS\\SQLEXPRESS;Database=Readify_IA_project;Trusted_Connection=True;TrustServerCertificate=True"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=DESKTOP-NJK648D\\SQLEXPRESS;Database=Readify_IA_project;Trusted_Connection=True;TrustServerCertificate=True"
+    },
   "JwtSettings": {
     "Key": "Super Secret Key Super Secret Key bba1cbc56f45",
     "Issuer": "https://localhost:7183",
